--- a/css/styles.css
+++ b/css/styles.css
@@ -1135,14 +1135,14 @@ textarea {
     box-sizing: border-box;
 }
 
-input {
+/* input {
     border-radius: 0;
     font-size: 14px;
     padding: 5px;
     width: 100%;
     margin: 0 0 10px 0;
     box-sizing: border-box;
-}
+} */
 
 input[type=submit] {
     border: 0;
@@ -1162,7 +1162,7 @@ input[type=submit]:hover, .dashboard-item:hover {
 
 #dashboard {
     padding: 0;
-    margin: 0;
+    margin-top: 25px;
     flex-wrap: wrap;
     gap: 12px;
     justify-content: center;
@@ -1190,7 +1190,7 @@ input[type=submit]:hover, .dashboard-item:hover {
 
 .dashboard-item {
     background-color: transparent;
-    font-size: 1rem;
+    font-size: clamp(14px, 4vw, 19px);
     padding: 5%;
     height: inherit;
     border: 1px solid;
